--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -13,6 +13,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-intl": "latest",
+    "react-modal": "^3.16.1",
     "react-pro-sidebar": "latest",
     "react-redux": "latest",
     "react-router-dom": "latest",
@@ -28,10 +29,11 @@
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/react-modal": "^3.16.3",
     "@types/react-redux": "latest",
     "@types/uuid": "latest",
     "@typescript-eslint/eslint-plugin": "latest",
-    "@typescript-eslint/parser": "latest",
+    "@typescript-eslint/parser": "^7.6.0",
     "@vitejs/plugin-react": "latest",
     "esbuild": "latest",
     "esbuild-runner": "latest",
