--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -1,42 +1,37 @@
 {
   "type": "module",
   "dependencies": {
-    "@microsoft/signalr": "latest",
+    "@microsoft/signalr": "^8.0.0",
     "@microsoft/signalr-protocol-msgpack": "^8.0.0",
-    "@reduxjs/toolkit": "latest",
-    "@vidstack/react": "latest",
-    "axios": "latest",
-    "chroma-js": "latest",
-    "hls.js": "latest",
+    "@reduxjs/toolkit": "^2.2.3",
+    "@vidstack/react": "^1.11.17",
+    "axios": "^1.6.8",
+    "hls.js": "^1.5.7",
     "primeicons": "^7.0.0",
-    "primereact": "^10.6.2",
-    "react": "latest",
-    "react-dom": "latest",
-    "react-intl": "latest",
-    "react-modal": "^3.16.1",
-    "react-pro-sidebar": "latest",
-    "react-redux": "latest",
-    "react-router-dom": "latest",
-    "redux": "latest",
-    "redux-persist": "latest",
-    "use-debounce": "latest",
-    "uuid": "latest"
+    "primereact": "^10.6.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-intl": "^6.6.5",
+    "react-pro-sidebar": "^1.1.0",
+    "react-redux": "^9.1.0",
+    "react-router-dom": "^6.22.3",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0",
+    "use-debounce": "^10.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@mui/icons-material": "latest",
-    "@rtk-query/codegen-openapi": "^1.0.0",
-    "@types/chroma-js": "latest",
-    "@types/node": "latest",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
-    "@types/react-modal": "^3.16.3",
-    "@types/react-redux": "latest",
-    "@types/uuid": "latest",
-    "@typescript-eslint/eslint-plugin": "latest",
+    "@mui/icons-material": "^5.15.15",
+    "@types/node": "^20.12.6",
+    "@types/react": "^18.2.75",
+    "@types/react-dom": "^18.2.24",
+    "@types/react-redux": "^7.1.33",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
-    "@vitejs/plugin-react": "latest",
-    "esbuild": "latest",
-    "esbuild-runner": "latest",
+    "@vitejs/plugin-react": "^4.2.1",
+    "esbuild": "^0.20.2",
+    "esbuild-runner": "^2.2.2",
     "eslint": "latest",
     "eslint-config-airbnb": "latest",
     "eslint-config-prettier": "latest",
@@ -55,8 +50,8 @@
     "eslint-plugin-unicorn": "latest",
     "eslint-plugin-unused-imports": "latest",
     "primeflex": "^3.3.1",
-    "typescript": "latest",
-    "vite": "latest"
+    "typescript": "^5.4.4",
+    "vite": "^5.2.8"
   },
   "eslintConfig": {
     "extends": [
