--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -5,17 +5,17 @@
     "@microsoft/signalr-protocol-msgpack": "^8.0.0",
     "@reduxjs/toolkit": "^2.2.3",
     "@uiw/react-color-sketch": "^2.1.1",
-    "@vidstack/react": "^1.11.17",
+    "@vidstack/react": "^1.11.21",
     "axios": "^1.6.8",
-    "hls.js": "^1.5.7",
+    "hls.js": "^1.5.8",
     "primeicons": "^7.0.0",
-    "primereact": "^10.6.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "primereact": "^10.6.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-intl": "^6.6.5",
     "react-pro-sidebar": "^1.1.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "use-debounce": "^10.0.0",
@@ -23,13 +23,13 @@
   },
   "devDependencies": {
     "@mui/icons-material": "^5.15.15",
-    "@types/node": "^20.12.6",
-    "@types/react": "^18.2.75",
-    "@types/react-dom": "^18.2.24",
+    "@types/node": "^20.12.7",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.8.0",
+    "@typescript-eslint/parser": "^7.8.0",
     "@vitejs/plugin-react": "^4.2.1",
     "esbuild": "^0.20.2",
     "esbuild-runner": "^2.2.2",
@@ -39,20 +39,20 @@
     "eslint-config-react-app": "latest",
     "eslint-import-resolver-typescript": "latest",
     "eslint-plugin-etc": "latest",
-    "eslint-plugin-html": "^8.0.0",
+    "eslint-plugin-html": "^8.1.1",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsx-a11y": "latest",
     "eslint-plugin-react": "latest",
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-react-hooks-addons": "^0.3.1",
-    "eslint-plugin-sort-keys-fix": "latest",
+    "eslint-plugin-sort-keys-fix": "^1.1.2",
     "eslint-plugin-tailwindcss": "latest",
     "eslint-plugin-typescript-sort-keys": "^3.2.0",
-    "eslint-plugin-unicorn": "latest",
-    "eslint-plugin-unused-imports": "latest",
+    "eslint-plugin-unicorn": "^52.0.0",
+    "eslint-plugin-unused-imports": "^3.2.0",
     "primeflex": "^3.3.1",
-    "typescript": "^5.4.4",
-    "vite": "^5.2.8"
+    "typescript": "^5.4.5",
+    "vite": "^5.2.10"
   },
   "eslintConfig": {
     "extends": [
