--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -16,6 +16,7 @@
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.1",
     "react-router-dom": "^6.23.0",
+    "react-spinners": "^0.13.8",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
     "use-debounce": "^10.0.0",
