--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -3,7 +3,7 @@
   "dependencies": {
     "@microsoft/signalr": "^8.0.0",
     "@microsoft/signalr-protocol-msgpack": "^8.0.0",
-    "@reduxjs/toolkit": "^2.2.4",
+    "@reduxjs/toolkit": "^2.2.5",
     "@uiw/react-color-sketch": "^2.3.0",
     "@vidstack/react": "^1.11.21",
     "axios": "^1.6.8",
@@ -12,7 +12,7 @@
     "primereact": "^10.6.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-intl": "^6.6.6",
+    "react-intl": "^6.6.8",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
@@ -22,7 +22,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@mui/icons-material": "^5.15.17",
+    "@mui/icons-material": "^5.15.18",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
@@ -34,15 +34,15 @@
     "esbuild": "^0.20.2",
     "esbuild-runner": "^2.2.2",
     "eslint": "latest",
-    "eslint-config-airbnb": "latest",
-    "eslint-config-prettier": "latest",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-react-app": "latest",
     "eslint-import-resolver-typescript": "latest",
     "eslint-plugin-etc": "latest",
     "eslint-plugin-html": "^8.1.1",
     "eslint-plugin-import": "latest",
     "eslint-plugin-jsx-a11y": "latest",
-    "eslint-plugin-react": "latest",
+    "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "latest",
     "eslint-plugin-react-hooks-addons": "^0.3.1",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
