--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -36,17 +36,17 @@
     "eslint": "latest",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-config-react-app": "latest",
-    "eslint-import-resolver-typescript": "latest",
-    "eslint-plugin-etc": "latest",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-etc": "^2.0.3",
     "eslint-plugin-html": "^8.1.1",
-    "eslint-plugin-import": "latest",
-    "eslint-plugin-jsx-a11y": "latest",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.34.1",
-    "eslint-plugin-react-hooks": "latest",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-hooks-addons": "^0.3.1",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
-    "eslint-plugin-tailwindcss": "latest",
+    "eslint-plugin-tailwindcss": "^3.15.2",
     "eslint-plugin-typescript-sort-keys": "^3.2.0",
     "eslint-plugin-unicorn": "^52.0.0",
     "eslint-plugin-unused-imports": "^3.2.0",
