--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -8,6 +8,7 @@
     "@vidstack/react": "^1.11.21",
     "axios": "^1.6.8",
     "hls.js": "^1.5.8",
+    "loglevel": "^1.9.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.6.5",
     "react": "^18.3.1",
