--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "@floating-ui/react": "^0.26.16",
     "@microsoft/signalr": "^8.0.0",
     "@microsoft/signalr-protocol-msgpack": "^8.0.0",
     "@reduxjs/toolkit": "^2.2.5",
