--- a/StreamMaster.Streams.Domain/StreamMaster.Streams.Domain.csproj
+++ b/StreamMaster.Streams.Domain/StreamMaster.Streams.Domain.csproj
@@ -12,6 +12,11 @@
     <None Remove="Enums\**" />
   </ItemGroup>
 
+
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Reinforced.Typings" Version="1.6.3" />
   </ItemGroup>
