--- a/StreamMaster.Streams/StreamMaster.Streams.csproj
+++ b/StreamMaster.Streams/StreamMaster.Streams.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="prometheus-net" Version="8.2.1" />
+    <PackageReference Include="SixLabors.Fonts" Version="2.0.4" />
+    <PackageReference Include="SixLabors.ImageSharp" Version="3.1.4" />
+    <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.3" />
   </ItemGroup>
 	
 	<ItemGroup>
