--- a/StreamMaster.PlayList/StreamMaster.PlayList.csproj
+++ b/StreamMaster.PlayList/StreamMaster.PlayList.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StreamMaster.Domain\StreamMaster.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
