--- a/StreamMaster.Streams.Domain/StreamMaster.Streams.Domain.csproj
+++ b/StreamMaster.Streams.Domain/StreamMaster.Streams.Domain.csproj
@@ -23,6 +23,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\StreamMaster.Domain\StreamMaster.Domain.csproj" />
+    <ProjectReference Include="..\StreamMaster.PlayList\StreamMaster.PlayList.csproj" />
   </ItemGroup>
 
 </Project>
