--- a/StreamMaster.Infrastructure.EF.PGSQL/StreamMaster.Infrastructure.EF.PGSQL.csproj
+++ b/StreamMaster.Infrastructure.EF.PGSQL/StreamMaster.Infrastructure.EF.PGSQL.csproj
@@ -6,8 +6,11 @@
 
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Configurations\**" />
     <Compile Remove="Extensions\**" />
+    <EmbeddedResource Remove="Configurations\**" />
     <EmbeddedResource Remove="Extensions\**" />
+    <None Remove="Configurations\**" />
     <None Remove="Extensions\**" />
   </ItemGroup>
   <ItemGroup>
