--- a/StreamMaster.Domain/StreamMaster.Domain.csproj
+++ b/StreamMaster.Domain/StreamMaster.Domain.csproj
@@ -28,8 +28,8 @@
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.3" />
     <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.10" />
-    <PackageReference Include="X.PagedList.EF" Version="8.4.7" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="X.Extensions.PagedList.EF" Version="10.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.7" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
     <PackageReference Include="Microsoft.Extensions.Features" Version="8.0.3" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.1" />
