--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -6,6 +6,7 @@
       "Microsoft": "Warning",
       "Microsoft.AspNetCore.SignalR": "Information",
       "Microsoft.AspNetCore.Http.Connections": "Information",
+      "Microsoft.EntityFrameworkCore.Query": "Information",
       //"Microsoft.AspNetCore.Mvc.Formatters": "Debug",
       //"System.Xml.Serialization": "Debug",      
       "StreamMaster.Infrastructure.VideoStreamManager": "Information",
