--- a/StreamMaster.API/logsettings.json
+++ b/StreamMaster.API/logsettings.json
@@ -2,6 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft.EntityFrameworkCore.Query": "Information",
       "Microsoft": "Warning",
       "Microsoft.AspNetCore.SignalR": "Information",
       "Microsoft.AspNetCore.Http.Connections": "Information",
