--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -1,21 +1,24 @@
 {
   "type": "module",
   "dependencies": {
-    "@floating-ui/react": "^0.26.20",
+    "@floating-ui/react": "^0.26.22",
     "@microsoft/signalr": "^8.0.7",
     "@microsoft/signalr-protocol-msgpack": "^8.0.7",
     "@reduxjs/toolkit": "^2.2.7",
     "@uiw/react-color-sketch": "^2.3.0",
-    "@vidstack/react": "^1.11.30",
-    "axios": "^1.7.3",
+    "@vidstack/react": "^1.12.8",
+    "axios": "^1.3.1",
     "crypto-js": "^4.2.0",
-    "framer-motion": "^11.3.21",
-    "hls.js": "^1.5.13",
+    "framer-motion": "^11.3.24",
+    "hls.js": "^1.5.14",
+    "i18next": "^23.12.3",
+    "i18next-browser-languagedetector": "^8.0.0",
     "loglevel": "^1.9.1",
     "primeicons": "^7.0.0",
-    "primereact": "^10.8.0",
+    "primereact": "^10.8.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.0.1",
     "react-intl": "^6.6.8",
     "react-pro-sidebar": "^1.1.0",
     "react-redux": "^9.1.2",
@@ -26,8 +29,8 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@mui/icons-material": "^5.16.6",
-    "@types/node": "^20.14.14",
+    "@mui/icons-material": "^5.16.7",
+    "@types/node": "^20.14.15",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-redux": "^7.1.33",
@@ -56,7 +59,7 @@
     "eslint-plugin-unused-imports": "^3.2.0",
     "primeflex": "^3.3.1",
     "typescript": "^5.5.4",
-    "vite": "^5.3.5"
+    "vite": "^5.4.0"
   },
   "eslintConfig": {
     "extends": [
