--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "@uiw/react-color-sketch": "^2.3.0",
     "@vidstack/react": "^1.12.8",
+    "@xyflow/react": "^12.0.4",
     "axios": "^1.3.1",
     "crypto-js": "^4.2.0",
     "framer-motion": "^11.3.24",
