--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -14,6 +14,7 @@
     "hls.js": "^1.5.14",
     "i18next": "^23.12.3",
     "i18next-browser-languagedetector": "^8.0.0",
+    "json-edit-react": "^1.15.5",
     "loglevel": "^1.9.1",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.2",
