--- a/StreamMaster.Streams/StreamMaster.Streams.csproj
+++ b/StreamMaster.Streams/StreamMaster.Streams.csproj
@@ -6,6 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+	<PackageReference Include="System.Formats.Asn1" Version="8.0.1" />
+	</ItemGroup>
+	
   <ItemGroup>
     <PackageReference Include="SixLabors.Fonts" Version="2.0.4" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
