--- a/StreamMaster.API/appsettings.json
+++ b/StreamMaster.API/appsettings.json
@@ -6,7 +6,8 @@
       "Microsoft": "Warning",
       "Microsoft.AspNetCore.SignalR": "Warning",
       "Microsoft.AspNetCore.Http.Connections": "Warning",
-      "Microsoft.EntityFrameworkCore.Query": "Warning"
+      "Microsoft.EntityFrameworkCore.Query": "Warning",
+      "System.Net.Http.HttpClient": "Warning"
     }
   }
 }
