--- a/streammasterwebui/.eslintrc.json
+++ b/streammasterwebui/.eslintrc.json
@@ -19,6 +19,7 @@
      "react-hooks-addons/no-unused-deps": "warn",
      "typescript-sort-keys/interface": "off",
     "no-lone-blocks": "off",
+    "unused-imports/no-unused-imports": "error",
     "unused-imports/no-unused-imports-ts": "error",
     "@next/next/no-img-element": "off",
      "@typescript-eslint/member-ordering": "error",
