--- a/.gitignore
+++ b/.gitignore
@@ -371,5 +371,7 @@ basever
 buildver
 smver
 release.config.cjs
+StreamMaster.Docs/.venv/
 StreamMaster.Docs/venv/
 StreamMaster.Docs/.chatgpt-md-translator
+StreamMaster.Docs/.venv/
