--- a/StreamMaster.Docs/streammaster/mkdocs.yml
+++ b/StreamMaster.Docs/streammaster/mkdocs.yml
@@ -11,8 +11,7 @@ theme:
         icon: material/brightness-7
         name: Switch to dark mode
 
-    # Palette toggle for dark mode
-    - scheme: slate
+    # Palette toggle for dark mode    - scheme: slate
       primary: deep orange
       toggle:
         icon: material/brightness-4
