--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -13,7 +13,7 @@ RUN \
     --mount=type=cache,id=apt-$TARGETARCH$TARGETVARIANT,sharing=locked,target=/var/cache/apt \
     apt-get update -yq \
     && apt-get upgrade -yq \
-    && apt-get install -yq --no-install-recommends xz-utils vlc-bin gosu postgresql postgresql-common curl gnupg lsb-release \
+    && apt-get install -yq --no-install-recommends xz-utils vlc-bin gosu postgresql postgresql-common curl gnupg lsb-release iputils-ping\
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && mkdir /docker-entrypoint-initdb.d
