--- a/.gitignore
+++ b/.gitignore
@@ -375,3 +375,4 @@ StreamMaster.Docs/.venv/
 StreamMaster.Docs/venv/
 StreamMaster.Docs/.chatgpt-md-translator
 StreamMaster.Docs/.venv/
+streammasterwebui/stats.html
