--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -59,8 +59,10 @@
     "eslint-plugin-unicorn": "^52.0.0",
     "eslint-plugin-unused-imports": "^3.2.0",
     "primeflex": "^3.3.1",
+    "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.6.2",
-    "vite": "^5.4.7"
+    "vite": "^5.4.7",
+    "vite-plugin-compression": "^0.5.1"
   },
   "eslintConfig": {
     "extends": [
