fix: speed up emby start ( still 3ish secs)

--- a/StreamMaster.Application/StreamMaster.Application.csproj
+++ b/StreamMaster.Application/StreamMaster.Application.csproj
@@ -79,4 +79,7 @@
     <ProjectReference Include="..\StreamMaster.SchedulesDirect\StreamMaster.SchedulesDirect.csproj" />
     <ProjectReference Include="..\StreamMaster.Streams.Domain\StreamMaster.Streams.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Programmes\Queries\" />
+  </ItemGroup>
 </Project>
