--- a/Dockerfile.base
+++ b/Dockerfile.base
@@ -13,7 +13,7 @@ RUN \
     --mount=type=cache,id=apt-$TARGETARCH$TARGETVARIANT,sharing=locked,target=/var/cache/apt \
     apt-get update -yq \
     && apt-get upgrade -yq \
-    && apt-get install -yq --no-install-recommends xz-utils vlc-bin gosu postgresql postgresql-common curl gnupg lsb-release iputils-ping\
+    && apt-get install -yq --no-install-recommends xz-utils vlc-bin gosu postgresql postgresql-common curl gnupg lsb-release iputils-ping pipx \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && mkdir /docker-entrypoint-initdb.d
@@ -26,3 +26,9 @@ RUN mkdir /tmp/ffmpeg/ \
     && cp /tmp/ffmpeg/bin/ffprobe /usr/local/bin/ \
     && chmod +x /usr/local/bin/ffmpeg /usr/local/bin/ffprobe \
     && rm -rf /tmp/ffmpeg.tar.xz /tmp/ffmpeg/ 
+
+RUN pipx install streamlink \
+    && ln -s /root/.local/bin/streamlink /usr/local/bin/streamlink
+
+RUN pipx install yt-dlp \
+    && ln -s /root/.local/bin/yt-dlp /usr/local/bin/yt-dlp
