--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -1,19 +1,22 @@
 {
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@floating-ui/react": "^0.26.24",
     "@microsoft/signalr": "^8.0.7",
     "@microsoft/signalr-protocol-msgpack": "^8.0.7",
+    "@mui/material": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.7",
-    "@uiw/react-color-sketch": "^2.3.1",
+    "@uiw/react-color-sketch": "^2.3.2",
     "@vidstack/react": "^1.12.11",
     "axios": "^1.7.7",
     "crypto-js": "^4.2.0",
-    "framer-motion": "^11.5.6",
+    "framer-motion": "^11.11.1",
     "hls.js": "^1.5.15",
-    "i18next": "^23.15.1",
+    "i18next": "^23.15.2",
     "i18next-browser-languagedetector": "^8.0.0",
-    "json-edit-react": "^1.16.3",
+    "json-edit-react": "^1.17.0",
     "loglevel": "^1.9.2",
     "primeicons": "^7.0.0",
     "primereact": "^10.8.3",
@@ -30,15 +33,15 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@mui/icons-material": "^5.16.7",
-    "@types/node": "^20.16.5",
-    "@types/react": "^18.3.8",
+    "@mui/icons-material": "^6.1.2",
+    "@types/node": "^20.16.10",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
-    "@types/react-redux": "^7.1.33",
+    "@types/react-redux": "^7.1.34",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vitejs/plugin-react": "^4.3.2",
     "esbuild": "^0.20.2",
     "esbuild-runner": "^2.2.2",
     "eslint": "latest",
@@ -48,9 +51,9 @@
     "eslint-import-resolver-typescript": "^3.6.3",
     "eslint-plugin-etc": "^2.0.3",
     "eslint-plugin-html": "^8.1.2",
-    "eslint-plugin-import": "^2.30.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-jsx-a11y": "^6.10.0",
-    "eslint-plugin-react": "^7.36.1",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-hooks-addons": "^0.3.1",
     "eslint-plugin-sort-keys-fix": "^1.1.2",
@@ -61,7 +64,7 @@
     "primeflex": "^3.3.1",
     "rollup-plugin-visualizer": "^5.12.0",
     "typescript": "^5.6.2",
-    "vite": "^5.4.7",
+    "vite": "^5.4.8",
     "vite-plugin-compression": "^0.5.1"
   },
   "eslintConfig": {
