--- a/Dockerfile.build
+++ b/Dockerfile.build
@@ -3,14 +3,17 @@ ARG TARGETPLATFORM
 ARG TARGETOS
 ARG TARGETARCH
 ARG TARGETVARIANT
+ARG NODE_VERSION=21.x
 
-RUN rm -f /etc/apt/apt.conf.d/docker-clean; echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
+# Remove docker-clean config and keep APT cache
+RUN rm -f /etc/apt/apt.conf.d/docker-clean; \
+    echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
 
-RUN \
-    --mount=type=cache,id=apt-$TARGETARCH$TARGETVARIANT,sharing=locked,target=/var/cache/apt \
+# APT update, upgrade, and install Node.js
+RUN --mount=type=cache,id=apt-$TARGETARCH$TARGETVARIANT,sharing=locked,target=/var/cache/apt \
     apt-get update -yq \
     && apt-get upgrade -yq \
-    && curl -fsSL https://deb.nodesource.com/setup_21.x | bash - \
+    && curl -fsSL https://deb.nodesource.com/setup_$NODE_VERSION | bash - \
     && apt-get install --no-install-recommends -yq nodejs \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
