--- a/StreamMaster.SchedulesDirect.Domain/StreamMaster.SchedulesDirect.Domain.csproj
+++ b/StreamMaster.SchedulesDirect.Domain/StreamMaster.SchedulesDirect.Domain.csproj
@@ -6,14 +6,18 @@
    
   </PropertyGroup>
   <ItemGroup>
+    <Compile Remove="Configuration\**" />
+    <Compile Remove="Helpers\**" />
+    <EmbeddedResource Remove="Configuration\**" />
+    <EmbeddedResource Remove="Helpers\**" />
+    <None Remove="Configuration\**" />
+    <None Remove="Helpers\**" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="MessagePack.Annotations" Version="2.5.172" />
     <PackageReference Include="Reinforced.Typings" Version="1.6.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StreamMaster.Domain\StreamMaster.Domain.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Configuration\" />
-    <Folder Include="Helpers\" />
   </ItemGroup>
 </Project>
