--- a/StreamMaster.Docs/streammaster/mkdocs.yml
+++ b/StreamMaster.Docs/streammaster/mkdocs.yml
@@ -29,3 +29,5 @@ plugins:
         - locale: es
           name: Spanish
           build: true
+
+site_url: https://senexcrenshaw.github.io/StreamMaster/
