--- a/StreamMaster.Docs/streammaster/mkdocs.yml
+++ b/StreamMaster.Docs/streammaster/mkdocs.yml
@@ -29,5 +29,29 @@ plugins:
         - locale: es
           name: Spanish
           build: true
+        - locale: fr
+          name: French
+          build: true
+        - locale: de
+          name: German
+          build: true
+        - locale: pt
+          name: Portuguese
+          build: true
+        - locale: da
+          name: Danish
+          build: true
+        - locale: sv
+          name: Swedish
+          build: true
+        - locale: nb
+          name: Norwegian Bokmål
+          build: true
+        - locale: fi
+          name: Finnish
+          build: true
+        - locale: is
+          name: Icelandic
+          build: true
 
-site_url: https://senexcrenshaw.github.io/StreamMaster/
+site_url: ""
