--- a/StreamMaster.Infrastructure.EF.Base/StreamMaster.Infrastructure.EF.Base.csproj
+++ b/StreamMaster.Infrastructure.EF.Base/StreamMaster.Infrastructure.EF.Base.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="EFCore.BulkExtensions" Version="8.1.1" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="X.PagedList" Version="10.5.3" />
   </ItemGroup>
 
   <ItemGroup>
