--- a/StreamMaster.SchedulesDirect.Domain/StreamMaster.SchedulesDirect.Domain.csproj
+++ b/StreamMaster.SchedulesDirect.Domain/StreamMaster.SchedulesDirect.Domain.csproj
@@ -16,6 +16,8 @@
   <ItemGroup>
     <PackageReference Include="MessagePack.Annotations" Version="2.5.187" />
     <PackageReference Include="Reinforced.Typings" Version="1.6.3" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="X.PagedList" Version="10.5.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StreamMaster.Domain\StreamMaster.Domain.csproj" />
