--- a/StreamMaster.SchedulesDirect/StreamMaster.SchedulesDirect.csproj
+++ b/StreamMaster.SchedulesDirect/StreamMaster.SchedulesDirect.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
     <PackageReference Include="System.Text.Json" Version="8.0.5" />
+    <PackageReference Include="X.PagedList" Version="10.5.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StreamMaster.Domain\StreamMaster.Domain.csproj" />
