--- a/StreamMaster.Streams/StreamMaster.Streams.csproj
+++ b/StreamMaster.Streams/StreamMaster.Streams.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="SixLabors.Fonts" Version="2.0.4" />
     <PackageReference Include="SixLabors.ImageSharp" Version="3.1.5" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="2.1.4" />
+    <PackageReference Include="X.PagedList" Version="10.5.3" />
   </ItemGroup>
 	
 	<ItemGroup>
