--- a/Dockerfile.sm.template
+++ b/Dockerfile.sm.template
@@ -7,39 +7,35 @@ WORKDIR /src
 # Copy all files into the image
 COPY . .
 
-# Run dotnet restore and npm install in parallel
-# RUN (dotnet restore "StreamMaster.API/StreamMaster.API.csproj" -a $TARGETARCH && \
-#     dotnet build "StreamMaster.API.csproj" -c Debug -o /app/build -a $TARGETARCH) & \
-#     (cd /src/streammasterwebui && npm install && npm run build && \
-#     cp -r dist/* /src/StreamMaster.API/wwwroot/) && wait
-
-# Step 1: Restore and build the .NET project
+# Step 1: Restore and build the .NET project with error-only output but keep echo messages
 RUN echo "Starting .NET restore..." && \
-    dotnet restore "StreamMaster.API/StreamMaster.API.csproj" -a $TARGETARCH && \
+    dotnet restore "StreamMaster.API/StreamMaster.API.csproj" -a $TARGETARCH --verbosity m && \
     echo ".NET restore completed successfully." || echo "Error during .NET restore!" && \
     \
     echo "Starting .NET build..." && \
-    dotnet build "StreamMaster.API.csproj" -c Debug -o /app/build -a $TARGETARCH && \
+    dotnet build "StreamMaster.API/StreamMaster.API.csproj" -c Debug -o /app/build -a $TARGETARCH --verbosity m && \
     echo ".NET build completed successfully." || echo "Error during .NET build!"
 
-# Step 2: Install npm packages, build the frontend, and copy to wwwroot
+# Step 2: Install npm packages, build the frontend, and copy to wwwroot with error-only output but keep echo messages
 RUN echo "Navigating to frontend directory: /src/streammasterwebui" && \
     cd /src/streammasterwebui && \
     echo "Installing npm dependencies..." && \
-    npm install && \
+    npm install --silent && \
     echo "npm install completed successfully." || echo "Error during npm install!" && \
     \
     echo "Building frontend with npm run build..." && \
-    npm run build && \
+    npm run build --silent && \
     echo "Frontend build completed successfully." || echo "Error during frontend build!" && \
     \
     echo "Copying frontend build files to /src/StreamMaster.API/wwwroot/..." && \
     cp -r dist/* /src/StreamMaster.API/wwwroot/ && \
     echo "Files copied to wwwroot successfully." || echo "Error copying files to wwwroot!"
 
-# Publish the .NET application
+# Publish the .NET application with error-only output but keep echo messages
 WORKDIR "/src/StreamMaster.API"
-RUN dotnet publish --no-restore "StreamMaster.API.csproj" -c Debug -o /app/publish /p:UseAppHost=false -a $TARGETARCH
+RUN echo "Publishing .NET application..." && \
+    dotnet publish --no-restore "StreamMaster.API.csproj" -c Debug -o /app/publish /p:UseAppHost=false -a $TARGETARCH --verbosity m && \
+    echo ".NET publish completed successfully." || echo "Error during .NET publish!"
 
 # Clean up source files
-RUN rm -rf /src
+#RUN rm -rf /src
