--- a/StreamMaster.Docs/streammaster/mkdocs.yml
+++ b/StreamMaster.Docs/streammaster/mkdocs.yml
@@ -16,7 +16,17 @@ theme:
       toggle:
         icon: material/brightness-4
         name: Switch to light mode
-
+nav:
+  - Home: index.md
+  - Getting Started 🚀: GettingStarted.md
+  - Auth 🔑: Auth.md
+  - EPG/XML Files 📅: EPG.md
+  - M3U Files 📜: M3U.md
+  - StreamGroup 📺: StreamGroup.md
+  - Profiles 🧑‍💻: Profiles.md
+  - Docs 📘: Docs.md
+  - Contributors 🌟: Contributors.md
+        
 plugins:
   - search
   - include-markdown
